Added Roxygen to mvnorm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(createVPCdata)
 export(deltaRule)
 export(getCovNames)
 export(getExt)
+export(getForestDF)
 export(getModel)
 export(ind_estimates)
+export(mvrnorm_vector)
 export(renameColumn)
 export(updateFREM)
