--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(createVPCdata)
 export(deltaRule)
 export(getCovNames)
 export(getExt)
+export(getForestDF)
 export(getModel)
 export(ind_estimates)
 export(renameColumn)
