Forest FREM functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(getForestDF)
 export(getModel)
 export(ind_estimates)
 export(mvrnorm_vector)
+export(plotForestDF)
 export(renameColumn)
 export(updateFREM)
