Added FREM functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(calcParameters)
 export(createFREMData)
 export(createVPCdata)
 export(deltaRule)
+export(dfCreateInputForestData)
 export(getCovNames)
 export(getExt)
 export(getForestDF)
