--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(dfCreateInputForestData)
 export(getCovNames)
 export(getExt)
 export(getForestDF)
+export(getExplainableVarDF)
 export(getModel)
 export(ind_estimates)
 export(mvrnorm_vector)
