Updated DESCRIPTION and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,14 @@ export(calcParameters)
 export(createFREMData)
 export(createVPCdata)
 export(deltaRule)
-export(dfCreateInputForestData)
+#export(dfCreateInputForestData)
 export(getCovNames)
 export(getExplainableVarDF)
 export(getExt)
-export(getForestDF)
+#export(getForestDF)
 export(getModel)
 export(ind_estimates)
 export(mvrnorm_vector)
-export(plotForestDF)
+#export(plotForestDF)
 export(renameColumn)
 export(updateFREM)
