--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(deltaRule)
 export(getCovNames)
 export(getExplainableVarDF)
 export(getExt)
+export(getIndividualParameters)
 export(getModel)
+export(getPhi)
 export(ind_estimates)
 export(mvrnorm_vector)
 export(renameColumn)
