Some tests crfeated.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,12 @@ Encoding: UTF-8
 LazyData: true
 Author: Niclas Jonsson [aut, cre],
   Joakim Nyberg [aut]
-RoxygenNote: 6.1.1
+RoxygenNote: 7.2.0
 Depends: MASS, foreach, doParallel, tidyverse (>= 1.0.0), stringr, data.table, rlang, numDeriv
-Suggests: knitr, rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 NeedsCompilation: no
+Config/testthat/edition: 3
