Added generale filename function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(createVPCdata)
 export(getCovNames)
 export(getExplainableVarDF)
 export(getExt)
+export(getFileNames)
 export(getIndividualParameters)
 export(getPhi)
 export(updateFREM)
