Smaller vpcdata. Working tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(getExt)
 export(getFileNames)
 export(getIndividualParameters)
 export(getPhi)
+export(plotExplainedVar)
 export(updateFREM)
