Renamed createVPCdata to createFFEMdata.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(addFremCovariates)
 export(calcFFEM)
 export(calcNumParCov)
 export(calcParameters)
+export(createFFEMdata)
 export(createFREMData)
-export(createVPCdata)
 export(getCovNames)
 export(getExplainableVarDF)
 export(getExt)
