--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calcParameters)
 export(createFFEMdata)
 export(createFREMData)
 export(getCovNames)
+export(getCovStats)
 export(getExplainableVarDF)
 export(getExt)
 export(getFileNames)
