Updated roxygen, and forest vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(addFremCovariates)
 export(buildmatrix)
 export(calcFFEM)
 export(calcNumParCov)
-export(calcParameters)
+export(calcParmeters)
 export(createFFEMdata)
 export(createFFEMmodel)
 export(createFREMData)
@@ -14,6 +14,5 @@ export(getCovStats)
 export(getExplainableVarDF)
 export(getExt)
 export(getFileNames)
-export(getIndividualParameters)
 export(plotExplainedVar)
 export(updateFREM)
