Updates to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(addFremCovariates)
 export(buildmatrix)
 export(calcFFEM)
 export(calcNumParCov)
-export(calcParmeters)
+export(calcParameters)
 export(createFFEMdata)
 export(createFFEMmodel)
 export(createFREMData)
