--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,5 @@ export(getExt)
 export(getFileNames)
 export(plotExplainedVar)
 export(updateFREM)
+importFrom(PhRame,add_stamp)
+importFrom(PhRame,save_script)
