--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(createFFEMdata)
 export(createFFEMmodel)
 export(createFREMData)
 export(findrecord)
+export(fremParTable)
 export(getCovNames)
 export(getExplainedVar)
 export(getExt)
