--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,5 @@ export(getExt)
 export(getFileNames)
 export(plotExplainedVar)
 export(updateFREM)
+importFrom(PhRame,add_stamp)
+importFrom(PhRame,save_script)
