--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,9 @@ Author: Niclas Jonsson [aut, cre],
   Joakim Nyberg [aut]
 RoxygenNote: 7.2.1
 Depends: MASS, foreach, doParallel, tidyverse (>= 1.0.0), stringr, data.table, rlang, numDeriv,Hmisc,xpose4
-Imports:
-	PhRame
 Suggests: 
+	PhRame,
+	PMXForest,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
