Added dependencies and reroxygenised

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,5 @@ export(plotExplainedVar)
 export(updateFREM)
 importFrom(PhRame,add_stamp)
 importFrom(PhRame,save_script)
+importFrom(rlang,peek_option)
+importFrom(withr,local_options)
