Added setupdfCovs funciton.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getExplainedVar)
 export(getExt)
 export(getFileNames)
 export(plotExplainedVar)
+export(setupdfCovs)
 export(updateFREM)
 importFrom(PhRame,add_stamp)
 importFrom(PhRame,save_script)
