--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,14 @@ export(getCovNames)
 export(getExplainedVar)
 export(getExt)
 export(getFileNames)
+export(getForestDFFREM)
 export(plotExplainedVar)
 export(setupdfCovs)
 export(updateFREM)
+import(doParallel)
+import(dplyr)
+import(foreach)
+import(stringr)
 importFrom(PhRame,add_stamp)
 importFrom(PhRame,save_script)
 importFrom(rlang,peek_option)
