Updated updateFREM - code and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getExplainedVar)
 export(getExt)
 export(getFileNames)
 export(getForestDFFREM)
+export(getPhi)
 export(plotExplainedVar)
 export(setupdfCovs)
 export(updateFREM)
