New parameter table function for PMXFrem that does not rely on PhRame.
All testst pass.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ export(buildmatrix)
 export(calcEtas)
 export(calcFFEM)
 export(calcNumParCov)
+export(calcParameterEsts)
 export(createFFEMdata)
 export(createFFEMmodel)
 export(createFREMData)
 export(findrecord)
 export(fremParTable)
+export(fremParameterTable)
 export(getCovNames)
 export(getExplainedVar)
 export(getExt)
