--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(getForestDFFREM)
 export(getPhi)
 export(plotExplainedVar)
 export(setupdfCovs)
+export(traceplot)
 export(updateFREM)
 import(doParallel)
 import(dplyr)
