--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(getPhi)
 export(plotExplainedVar)
 export(setupdfCovs)
 export(traceplot)
-export(updateFREM)
+export(updateFREMmodel)
 import(doParallel)
 import(dplyr)
 import(foreach)
