--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,56 @@ import(doParallel)
 import(dplyr)
 import(foreach)
 import(stringr)
+importFrom(Hmisc,wtd.mean)
+importFrom(MASS,mvrnorm)
+importFrom(data.table,":=")
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,as.data.table)
+importFrom(data.table,fread)
+importFrom(data.table,rbindlist)
+importFrom(doParallel,registerDoParallel)
+importFrom(doParallel,stopImplicitCluster)
+importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(dplyr,select_at)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarise_all)
+importFrom(dplyr,summarize)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labeller)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(magrittr,"%>%")
+importFrom(numDeriv,grad)
+importFrom(rlang,.data)
 importFrom(rlang,peek_option)
+importFrom(stats,cor)
+importFrom(stats,cov)
+importFrom(stats,median)
+importFrom(stats,quantile)
+importFrom(stats,reorder)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
+importFrom(stats,var)
+importFrom(stringr,str_replace)
+importFrom(tools,file_ext)
+importFrom(tools,file_path_sans_ext)
+importFrom(utils,head)
+importFrom(utils,read.table)
+importFrom(utils,write.csv)
 importFrom(withr,local_options)
