Added more roxygen examples to updateFREMmodel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(getExt)
 export(getFileNames)
 export(getForestDFFREM)
 export(getPhi)
+export(initializeModelParameters)
 export(plotExplainedVar)
 export(setupdfCovs)
 export(traceplot)
