--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,16 @@
 Package: PMXFrem
 Type: Package
 Title: Support functions for FREM analyses in NONMEM
-Version: 1.2.9
-Authors@R: c(
-    person("Niclas", "Jonsson", email = "niclas.jonsson@pharmetheus.com", role = c("aut", "cre")),
-    person("Joakim", "Nyberg", email = "joakim.nyberg@pharmetheus.com", role = c("aut"))
-  )
-Maintainer: Niclas Jonsson <niclas.jonsson@pharmetheus.com>
+Version: 1.2.10
+Authors@R:
+    person("Pharmetheus AB", email = "info@pharmetheus.com", role = c("cre","cph")),
+    person("Niclas", "Jonsson", role = c("aut")),
+    person("Joakim", "Nyberg", role = c("aut"))
+Maintainer: Pharmetheus AB <info@pharmetheus.com>
 Description: Support functions for FREM analyses in NONMEM that will facilitate pre- and post-processing.
-License: Propriety
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-Author: Niclas Jonsson [aut, cre],
-  Joakim Nyberg [aut]
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Depends:
