--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Package: PMXFrem
 Type: Package
 Title: Support functions for FREM analyses in NONMEM
 Version: 1.2.10
-Authors@R:
+Authors@R:c(
     person("Pharmetheus AB", email = "info@pharmetheus.com", role = c("cre","cph")),
     person("Niclas", "Jonsson", role = c("aut")),
     person("Joakim", "Nyberg", role = c("aut"))
+    )
 Maintainer: Pharmetheus AB <info@pharmetheus.com>
 Description: Support functions for FREM analyses in NONMEM that will facilitate pre- and post-processing.
 License: GPL (>= 3)
